# brainstorm

./: .gitignore  Cargo.toml  README.md  build_webdemo.sh  run_webdemo.sh  scryfall_errors.txt  shell.nix
boseiju/: Cargo.toml  README.md
boseiju/src/: ability_tree.rs  card.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  utils.rs
boseiju/src/ability_tree/: ability.rs  action.rs  card_layout.rs  charasteristic_defining_ability.rs  colors.rs  conditional.rs  cost.rs  dummy_terminal.rs  event.rs  if_condition.rs  imperative.rs  imperative_list.rs  node_data.rs  number.rs  object.rs  player.rs  player_action.rs  replacement_effect.rs  root.rs  span.rs  state.rs  statement.rs  states.rs  terminals.rs  time.rs  tree_node.rs  type_line.rs  zone.rs
boseiju/src/ability_tree/ability/: ability_word.rs  activated.rs  common.rs  keyword.rs  keyword_ability.rs  saga_chapter.rs  spell.rs  statik.rs  triggered.rs
boseiju/src/ability_tree/action/: creature_action.rs  permanent_action.rs  player_action.rs
boseiju/src/ability_tree/card_layout/: card_face.rs  flip_layout.rs  modaldfc_layout.rs  normal_layout.rs  saga_layout.rs  split_layout.rs  token_layout.rs  transform_layout.rs
boseiju/src/ability_tree/conditional/: event_occured.rs  number_of_resolution.rs  object_is_of_kind.rs  player_controls_permanent.rs  stack_object_has_state.rs  this_is_your_turn.rs
boseiju/src/ability_tree/continuous_effect/: continuous_effect_kind.rs
boseiju/src/ability_tree/event/: create_token_event.rs  creature_action_event.rs  creature_performs_action.rs  enters_the_battlefield_event.rs  life_gained_event.rs  object_becomes_state.rs  object_gains_state.rs  permanent_performs_action.rs  player_action_event.rs  player_cast_spell_event.rs  player_performs_action.rs  put_counter_on_permanent_event.rs  replacement.rs  source.rs
boseiju/src/ability_tree/if_condition/: condition_timeframe.rs  event_occured.rs  this_is_your_turn.rs
boseiju/src/ability_tree/imperative/: add_mana_imperative.rs  choose_imperative.rs  create_token_imperative.rs  gain_life.rs  (+20 more)
boseiju/src/card/: card_type.rs  colors.rs  layout.rs  legalities.rs  types.rs
boseiju/src/lexer/: error.rs  span.rs  tokens.rs
boseiju/src/parser/: error.rs  node.rs  rule_map.rs  rules.rs  rules.txt
boseiju/src/utils/: containers.rs  dummy_init.rs  parsing.rs  tree_formatter.rs
boseiju/tests/: lexer.rs  parser.rs
idris-derive/: Cargo.toml
idris-derive/src/: lib.rs
mtg-cardbase/: Cargo.toml  build.rs  data_fetcher.py
mtg-cardbase/data/: 1996_world_champion.json  1997_world_championships_ad.json  1998_world_championships_ad.json  1999_world_championships_ad.json  2000_world_championships_ad.json  2001_world_championships_ad.json  2002_world_championships_ad.json  2003_world_championships_ad.json  2004_world_championships_ad.json  _.json  _2_mace.json  _ach_hans_run_.json  _balls_of_fire.json  _bird_gets_the_worm.json  _brims_barone_midway_mobster.json  _goblin.json  _lifetime_pass_holder.json  _name_sticker_goblin.json  _o_saurus.json  _rocketship.json  _rumors_of_my_death_.json  _trespasser.json  a_acererak_the_archlich.json  a_akki_ronin.json  a_alrund_god_of_the_cosmos_a_hakka_whispering_raven.json  a_alrund_s_epiphany.json  a_ancestral_katana.json  a_ardent_dustspeaker.json  a_armory_veteran.json  a_asari_captain.json  a_baleful_beholder.json  a_base_camp.json  a_binding_geist_a_spectral_binding.json  a_blessed_hippogriff_a_tyr_s_blessing.json  a_blood_artist.json  a_bretagard_stronghold.json  a_briar_hydra.json  a_brine_comber_a_brinebound_gift.json  a_bruenor_battlehammer.json  a_buy_your_silence.json  (+35251 more)
mtg-cardbase/src/: card.rs  cards.rs  lib.rs  main.rs  static_json.rs
mtg-cardbase/src/cards/: _2_mace.rs  __________________trespasser.rs  ____________rocketship.rs  ______balls_of_fire.rs  ______bird_gets_the_worm.rs  ______goblin.rs  ______o_saurus.rs  ______underscores_only.rs  _ach__hans__run__.rs  _brims__barone__midway_mobster.rs  _lifetime__pass_holder.rs  _name_sticker__goblin.rs  _rumors_of_my_death_______.rs  a_acererak_the_archlich.rs  a_akki_ronin.rs  a_alrund__god_of_the_cosmos____a_hakka__whispering_raven.rs  a_alrund_s_epiphany.rs  a_ancestral_katana.rs  a_ardent_dustspeaker.rs  a_armory_veteran.rs  a_asari_captain.rs  a_baleful_beholder.rs  a_base_camp.rs  a_binding_geist____a_spectral_binding.rs  a_blessed_hippogriff____a_tyr_s_blessing.rs  a_blood_artist.rs  a_bretagard_stronghold.rs  a_briar_hydra.rs  a_brine_comber____a_brinebound_gift.rs  a_bruenor_battlehammer.rs  a_buy_your_silence.rs  a_cabaretti_charm.rs  a_canopy_tactician.rs  a_capenna_express.rs  a_carnelian_orb_of_dragonkind.rs  a_case_the_joint.rs  a_cauldron_familiar.rs  a_celebrity_fencer.rs  a_celestial_regulator.rs  a_circle_of_the_land_druid.rs  (+35251 more)
mtg-cardbase/src/static_json/: object.rs  parser.rs
mtg-data/: .envrc  Cargo.toml  build.rs  data_fetcher.py  generate_rust_source.py  shell.nix
mtg-data/data/: ability_word.txt  artifact_type.txt  battle_type.txt  card_type.txt  creature_type.txt  enchantment_type.txt  flavor_word.txt  format.txt  keyword_ability.txt  keyword_action.txt  land_type.txt  planeswalker_type.txt  spell_type.txt  supertype.txt
mtg-data/src/: ability_word.rs  artifact_type.rs  battle_type.rs  card_type.rs  color.rs  creature_type.rs  enchantment_type.rs  error.rs  flavor_word.rs  format.rs  keyword_ability.rs  keyword_action.rs  land_type.rs  legality.rs  lib.rs  mana_cost.rs  planeswalker_type.rs  spell_type.rs  supertype.rs
odin/: Cargo.toml  tmp.txt
odin/src/: ability_tree.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs
odin/src/ability_tree/: ability.rs  continuous_effect.rs  cost.rs  imperative.rs  object.rs  statement.rs  terminals.rs  zone.rs
odin/src/lexer/: error.rs  tokens.rs
odin/src/parser/: error.rs  node.rs  rules.rs
odin/src/utils/: tree_formatter.rs
odin/tests/: lexer.rs  parser.rs
tolaria/: Cargo.toml
tolaria/src/: card_type.rs  colors.rs  layout.rs  legalities.rs  lib.rs  mana_cost.rs  types.rs
urza/: Cargo.toml  shell.nix
urza/src/: flatten.rs  main.rs  model.rs  node_id.rs
(+663 files in other folders)
