# https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
members = ["krark", "mtg-cardbase", "mtg-data", "boseiju"]
resolver = "3"

[workspace.package]
version = "0.0.1"
authors = ["Virgile HENRY"]
description = "Vector embedding for MTG cards"
documentation = "https://github.com/VirgileHenry/brainstorm"
edition = "2024"

[workspace.dependencies]
# Own crates as dependencies
krark = { path = "krark" }
mtg-data = { path = "mtg-data" }
mtg-cardbase = { path = "mtg-cardbase" }
boseiju = { path = "boseiju" }
# Additional dependencies
arrayvec = { version = "0.7.6", features = ["serde"] }
lazy_static = "1.5.0"
rayon = "1.11.0"
regex = "1.11.3"
serde = { version = "1.0.221", features=["derive"] }
serde_json = "1.0.145"
