[package]
name = "boseiju"
version.workspace = true
edition.workspace = true
workspace = ".."

[dependencies]
arrayvec = { workspace = true }
idris = { workspace = true }
idris-derive = { workspace = true }
lazy_static = { workspace = true }
mtg-cardbase = { workspace = true }
mtg-data = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
petgraph = "0.8.3"
uuid = { version = "1.18.1", features = ["serde"] }
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
krark = { workspace = true }

[features]
default = []
ts_export = ["dep:ts-rs", "mtg-data/ts_export", "mtg-cardbase/ts_export"]

[[bin]]
name = "parser_perf"
path = "bin/parser_perf.rs"

[[bin]]
name = "debug_graph"
path = "bin/debug_graph.rs"

[[bin]]
name = "parse_all_cards"
path = "bin/parse_all_cards.rs"

[[bin]]
name = "card_coverage"
path = "bin/card_coverage.rs"

[[test]]
name = "lexer"
path = "tests/lexer.rs"
harness = false

[[test]]
name = "parser"
path = "tests/parser.rs"
harness = false
