[package]
name = "boseiju"
version.workspace = true
edition.workspace = true
workspace = ".."

[dependencies]
arrayvec = { workspace = true }
idris = { workspace = true }
idris-derive = { workspace = true }
lazy_static = { workspace = true }
mtg-cardbase = { workspace = true }
mtg-data = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
petgraph = "0.8.3"
uuid = { version = "1.18.1", features = ["serde"] }
rapidhash = { version = "4.4.1", optional = true }

[dev-dependencies]
krark = { workspace = true }

[features]
default = ["lexer", "parser"]
lexer = []
parser = ["lexer", "dep:rapidhash"]
spanned_tree = ["lexer"]

[[bin]]
name = "debug_graph"
path = "bin/debug_graph.rs"

[[bin]]
name = "debug_fdn"
path = "bin/debug_fdn.rs"

[[bin]]
name = "parse_all_cards"
path = "bin/parse_all_cards.rs"

[[bin]]
name = "card_coverage"
path = "bin/card_coverage.rs"

[[bin]]
name = "export_for_webdemo"
path = "bin/export_for_webdemo.rs"

[[bin]]
name = "most_required_tokens"
path = "bin/most_required_tokens.rs"

[[test]]
name = "lexer"
path = "tests/lexer.rs"
harness = false

[[test]]
name = "parser"
path = "tests/parser.rs"
harness = false
