[package]
name = "mtg-cardbase"
version.workspace = true
edition.workspace = true
workspace = ".."

[dependencies]
arrayvec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true, optional = true }

[features]
default = []
ts_export = ["dep:ts-rs"]
