[package]
name = "mtg-data"
version.workspace = true
edition.workspace = true
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idris = { workspace = true }
idris-derive = { workspace = true }
serde = { workspace = true }
