[package]
name = "tolaria"
version.workspace = true
edition.workspace = true

[[bin]]
name = "parse_all"
path = "bin/parse_all.rs"

[dependencies]
arrayvec = { workspace = true }
mtg-cardbase = { workspace = true }
mtg-data = { workspace = true }
odin = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = "1.18.1"
