[package]
name = "tolaria"
version.workspace = true
edition.workspace = true

[[bin]]
name = "parse_all"
path = "bin/parse_all.rs"

[[bin]]
name = "export"
path = "bin/export.rs"

[dependencies]
arrayvec = { workspace = true }
mtg-cardbase = { workspace = true }
mtg-data = { workspace = true }
lazy_static = { workspace = true }
odin = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.18.1", features = ["serde"] }
argh = "0.1.13"
