[package]
name = "urza"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
tolaria = { workspace = true }
mtg-cardbase = { workspace = true }
mtg-data = { workspace = true }
rayon = { workspace = true }
chrono = "0.4.42"
