[package]
name = "urza"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
burn =  { version = "0.18.0", features = ["wgpu"] }
chrono = "0.4.42"
mtg-cardbase = { workspace = true }
mtg-data = { workspace = true }
odin = { workspace = true }
rayon = { workspace = true }
tolaria = { workspace = true }
